# wp2hugo

./: .gitignore  .pylintrc  CHANGELOG  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: pylint.yml
wp2hugo/: __main__.py  commands.py
